# playing-doodlejump

./: README.md  run.sh
launch/: archive.launch  imitate.launch  tf.launch  viz.launch
src/doobot/: CMakeLists.txt  package.xml
src/doobot/scripts/: doobot_motor.py  doobot_node.py
src/game/: CMakeLists.txt  package.xml
src/game/msg/: DoobotAction.msg  PlayCtl.msg
src/game/scripts/: archive.py  ctimers.py  db.py  filter_scores.py
src/implay/: CMakeLists.txt  package.xml
src/implay/include/implay/: playNet.h
src/implay/msg/: DoobotActionArchive.msg
src/implay/scripts/: adj_rollouts.py  deploy_tf.py  sts.py  tfplay_node.py  train_tf.py
src/implay/scripts/snapshots/: checkpoint  net1i.data-00000-of-00001  net1i.index  net2a.data-00000-of-00001  net2a.index
src/implay/src/: implay.cpp  playNet.cpp  tensorNet.cpp
src/score/: CMakeLists.txt  package.xml
src/score/include/score/: scoreNet.h  tensorNet.h
src/score/msg/: DoodleScore.msg
src/score/src/: score.cpp  scoreNet.cpp  tensorNet.cpp
src/score/src/model/: net10_deploy.prototxt
src/viz/: CMakeLists.txt  package.xml
src/viz/src/: viz.cpp
