<?xml version="1.0"?>
<package>
  <name>game</name>
  <version>0.0.0</version>
  <description>The DoodleJump Game</description>
  <maintainer email="rgb@todo.todo">rgb</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>ros_numpy</run_depend>
  <run_depend>score</run_depend>

  <export>
  </export>
</package>
